syntax = "proto3";

option go_package = "modist/proto";

package proto;

service Partitioner {
    rpc Lookup(PartitionLookupRequest) returns (PartitionLookupReply) {}

    rpc RegisterReplicaGroup(RegisterReplicaGroupRequest) returns (RegisterReplicaGroupReply) {}
    rpc UnregisterReplicaGroup(UnregisterReplicaGroupRequest) returns (UnregisterReplicaGroupReply) {}
}

message PartitionLookupRequest {
    string key = 1;
}

message PartitionLookupReply {
    string rewritten_key = 1;
    uint64 replica_group_id = 2;
}

message RegisterReplicaGroupRequest {
    uint64 id = 1;
    repeated string members = 2;
}

message RegisterReplicaGroupReply {}

message UnregisterReplicaGroupRequest {
    uint64 id = 1;
}

message UnregisterReplicaGroupReply {}
